Fix display bug on Safari browser
Add -.3px left and right margin to elements to stop last element
shifting down a row.
Minor change to layout of first 3 sections to make it easier to read on
widths between 992 and 1199px

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,6 +40,10 @@ p {
     flex-wrap: wrap;
 }
 
+.row [class*=col-]{
+    margin:0 -.3px;
+}
+
 .inline-link {
     color: #bf0d1c;
     transition: all .2s ease-in-out
